<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_remaining"
            android:icon="@drawable/ic_inbox"
            android:title="@string/nav_remaining_todo"/>
        <item
            android:id="@+id/nav_forecast"
            android:icon="@drawable/ic_calendar_today"
            android:title="@string/nav_forecast" />
        <item
            android:id="@+id/nav_completed"
            android:icon="@drawable/ic_check_box"
            android:title="@string/nav_completed_text" />

    </group>

    <item android:title="@string/nav_others">
        <menu>
            <item
                android:id="@+id/about"
                android:icon="@drawable/ic_info"
                android:title="@string/menu_info" />
            <item
                android:id="@+id/nav_help"
                android:icon="@drawable/ic_help"
                android:title="@string/menu_help" />
        </menu>
    </item>

</menu>
